--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -6,7 +6,8 @@
   padding: 0;
 }
 
-html, #root {
+html,
+#root {
   height: 100%;
 }
 
@@ -18,7 +19,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: url("/src/assets/bg.jpg");
   background-size: cover;
-  /* min-height: 100rem; */
   height: 100%;
 }
 
