--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -6,7 +6,8 @@
   padding: 0;
 }
 
-html, #root {
+html,
+#root {
   height: 100%;
 }
 
@@ -18,6 +19,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: url("/src/assets/bg.jpg");
   background-size: cover;
+  background-position: "center";
+  position: "relative";
   /* min-height: 100rem; */
   height: 100%;
 }
