--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -9,7 +9,8 @@ article {
   justify-content: center;
 }
 
-article h1 {
+h1 {
+  align-self: center;
   color: #8026c9;
   margin-top: 3rem;
   text-shadow: 0px 0px 0 rgb(121, 31, 194),
@@ -46,20 +47,80 @@ article h1 {
     0px 0px 28px rgba(0, 0, 0, .2);
 }
 
-.style {
-  
-}
-
-.button-launch {
-  background-color: #8026c9;
-  border-color: darkviolet;
-  color: black;
-  border-radius: 3px;
-  padding: 10px 20px;
+/* CSS */
+.button-redirect {
+  display: flex;
+  align-self: center;
+  appearance: button;
+  /* background-color: #4D4AE8;
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, .15), rgba(255, 255, 255, 0)); */
+  border: 3px solid #36008d;
+  border-radius: 1rem;
+  box-shadow: rgba(255, 255, 255, 0.15) 0 1px 0 inset, rgba(46, 54, 80, 0.075) 0 1px 1px;
+  box-sizing: border-box;
+  color: #FFFFFF;
   cursor: pointer;
+  display: inline-block;
+  font-family: Inter, sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.5;
+  margin-top: 10rem;
+  padding: .5rem 1rem;
+  height: 3rem;
+  width: 13rem;
+  text-align: center;
+  text-transform: none;
+  transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+
 }
 
-.button-launch:hover {
-  background-color: black;
-  color: white;
+.button-redirect:focus:not(:focus-visible),
+.button-redirect:focus {
+  outline: 0;
 }
+
+.button-redirect:hover {
+  background-color: #3733E5;
+  border-color: #3733E5;
+}
+
+.button-redirect:focus {
+  background-color: #413FC5;
+  border-color: #3E3BBA;
+  box-shadow: rgba(255, 255, 255, 0.15) 0 1px 0 inset, rgba(46, 54, 80, 0.075) 0 1px 1px, rgba(104, 101, 235, 0.5) 0 0 0 .2rem;
+}
+
+.button-redirect:active {
+  background-color: #3E3BBA;
+  background-image: none;
+  border-color: #3A38AE;
+  box-shadow: rgba(46, 54, 80, 0.125) 0 3px 5px inset;
+}
+
+.button-redirect:active:focus {
+  box-shadow: rgba(46, 54, 80, 0.125) 0 3px 5px inset, rgba(104, 101, 235, 0.5) 0 0 0 .2rem;
+}
+
+.button-redirect:disabled {
+  background-image: none;
+  box-shadow: none;
+  opacity: .65;
+  pointer-events: none;
+}
+
+.earth {
+  align-self: center;
+  margin-top: 5rem;
+  width: 80rem;
+}
+
+/* .earth {
+  align-self: center;
+  margin-top: 5rem;
+  width: 16rem;
+} */
