--- a/frontend/src/styles/Navbar.module.css
+++ b/frontend/src/styles/Navbar.module.css
@@ -4,11 +4,24 @@
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
+  padding: 1rem;
 }
 
 .logo {
-  width: 11rem;
+  width: 12rem;
   filter: drop-shadow(0px 0px 10px rgba(44, 0, 165, 0.5));
+}
+
+.burger-menu {
+  display: flex;
+  justify-content: flex-end;
+  z-index: 9999;
+  margin-right: 2rem;
+  border-width: 0;
+}
+
+.burger-menu:hover {
+  cursor: pointer;
 }
 
 .burger-img {
@@ -24,8 +37,8 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgb(255, 255, 255, 0.20);
-  backdrop-filter: blur(0.3rem);
+  background-color: rgba(4, 5, 23, 0.169);
+  backdrop-filter: blur(0.8rem);
 }
 
 .nav-links ul {
@@ -36,17 +49,15 @@
 
 .nav-links li {
   list-style-type: none;
-  margin: 2rem
+  margin: 2rem;
 }
 
 .nav-links li a {
   text-decoration: none;
   display: block;
-  font-size: 1.4rem;
+  font-size: 2rem;
   color: #c8c8c8;
-  padding-inline: 1rem;
 }
-
 
 @media screen and (min-width: 900px) {
   .navbar {
