--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -33,7 +33,7 @@ h1 {
   font-size: 1rem;
   font-weight: 700;
   line-height: 1.5;
-  margin-top: 10rem;
+  margin-top: 9rem;
   padding: 0.5rem 1rem;
   height: 3rem;
   width: 13rem;
@@ -87,10 +87,5 @@ h1 {
   align-self: center;
   margin-top: 5rem;
   width: 80rem;
+  filter: drop-shadow(0px 0px 30px rgba(5, 0, 165, 0.2));
 }
-
-/* .earth {
-  align-self: center;
-  margin-top: 5rem;
-  width: 16rem;
-} */
