--- a/frontend/src/styles/Footer.module.css
+++ b/frontend/src/styles/Footer.module.css
@@ -1,8 +1,8 @@
 .footer {
   position: relative;
-  /* bottom: 0;
-  left: 0;
-  right: 0; */
+  bottom: 0;
+  /* left: 0;
+  right: 0;  */
   background-color: rgb(8, 7, 14);
   color: #fff;
   font-size: 14px;
