--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -1,18 +1,20 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 60rem;
+  flex-grow: 1;
 }
 
-article {
-  display: flex;
-  justify-content: center;
-}
-
-h1 {
+.title {
   align-self: center;
-  color: #fff;
-  margin-top: 3rem;
+  margin-top: 2.5rem;
+  font-size: 2.8rem;
+  color: #fff
+}
+
+.slogan {
+  align-self: center;
+  color: #6419dc;
+  margin-top: 1rem;
 }
 
 .button-redirect {
@@ -30,13 +32,12 @@ h1 {
   cursor: pointer;
   display: inline-block;
   font-family: Inter, sans-serif;
-  font-size: 1rem;
-  font-weight: 700;
+  font-size: 1.3rem;
+  font-weight: 500;
   line-height: 1.5;
-  margin-top: 9rem;
-  padding: 0.5rem 1rem;
-  height: 3rem;
-  width: 13rem;
+  padding: 0.5rem 1.5rem;
+  height: 3.7rem;
+  width: 14rem;
   text-align: center;
   text-transform: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
@@ -83,9 +84,134 @@ h1 {
   pointer-events: none;
 }
 
+@keyframes flicker {
+  0% {
+    transform: rotate(-1deg);
+  }
+
+  20% {
+    transform: rotate(3deg) scaleY(1.05);
+  }
+
+  60% {
+    transform: rotate(1deg);
+  }
+
+  80% {
+    transform: rotate(-1deg) scaleY(0.9);
+  }
+
+  100% {
+    transform: rotate(4deg);
+  }
+}
+
+.rocket {
+  width: 230px;
+  position: relative;
+  z-index: 3;
+}
+
+.btn {
+  background: #007ff4;
+  box-shadow: 0px 4px 12px rgba(43, 54, 65, 0.1);
+  display: block;
+  margin: auto;
+  border: none;
+  color: white;
+  font-family: Roboto;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 250ms ease;
+  padding: 10px 24px;
+}
+
+.btn:hover {
+  background: #2c97fa;
+}
+
+.btn:active {
+  background: #1374ce;
+  transform: scale(0.98);
+}
+
+.rocket-wrapper {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  z-index: -9999;
+  top: 380px;
+  transition: 4s ease;
+  pointer-events: none;
+}
+
+.rocket-launched {
+  transform: translateY(-1200px);
+}
+
+.rocket-launched .flame-wrapper {
+  opacity: 1 !important;
+}
+
+.rocket-wrapper .flame-wrapper {
+  position: absolute;
+  width: max-content;
+  height: max-content;
+  left: 50%;
+  transform: scaleY(-1) translateX(-40px);
+  bottom: 46px;
+  opacity: 0;
+  transition: 250ms ease;
+}
+
+.flame-anim {
+  position: relative;
+  animation: flicker 3ms ease-in infinite;
+}
+
+.flame {
+  bottom: 0;
+  position: absolute;
+  border-radius: 50% 0% 50% 50%;
+  transform: rotate(-45deg);
+}
+
+.red {
+  width: 80px;
+  height: 80px;
+  background: orangered;
+  box-shadow: 0px 0px 10px 5px orangered;
+}
+
+.orange {
+  left: 10px;
+  width: 60px;
+  height: 60px;
+  background: orange;
+  box-shadow: 0px 0px 12px 6px orange;
+}
+
+.gold {
+  left: 18px;
+  width: 45px;
+  height: 45px;
+  background: gold;
+  box-shadow: 0px 0px 9px 4px gold;
+}
+
+.white {
+  left: 22px;
+  width: 35px;
+  height: 35px;
+  background: lightyellow;
+  box-shadow: 0px 0px 9px 4px lightyellow;
+}
+
 .earth {
   align-self: center;
   margin-top: 5rem;
   width: 80rem;
+  z-index: -9999;
   filter: drop-shadow(0px 0px 30px rgba(5, 0, 165, 0.2));
 }
