--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -15,14 +15,27 @@
   align-self: center;
   color: #6419dc;
   margin-top: 1rem;
+  z-index: 200;
+}
+
+.hide-things {
+  animation: fadeOut 1500ms;
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
 }
 
 .button-redirect {
   display: flex;
   align-self: center;
   appearance: button;
-  /* background-color: #4D4AE8;
-  background-image: linear-gradient(180deg, rgba(255, 255, 255, .15), rgba(255, 255, 255, 0)); */
   border: 3px solid #36008d;
   border-radius: 1rem;
   box-shadow: rgba(255, 255, 255, 0.15) 0 1px 0 inset,
@@ -46,6 +59,7 @@
   -webkit-user-select: none;
   touch-action: manipulation;
   vertical-align: middle;
+  z-index: 200;
 }
 
 .button-redirect:focus:not(:focus-visible),
@@ -112,41 +126,19 @@
   z-index: 3;
 }
 
-.btn {
-  background: #007ff4;
-  box-shadow: 0px 4px 12px rgba(43, 54, 65, 0.1);
-  display: block;
-  margin: auto;
-  border: none;
-  color: white;
-  font-family: Roboto;
-  font-weight: bold;
-  font-size: 18px;
-  cursor: pointer;
-  transition: 250ms ease;
-  padding: 10px 24px;
-}
-
-.btn:hover {
-  background: #2c97fa;
-}
-
-.btn:active {
-  background: #1374ce;
-  transform: scale(0.98);
-}
-
 .rocket-wrapper {
   display: flex;
+  visibility: hidden;
   justify-content: center;
   position: relative;
-  z-index: -9999;
+  z-index: 100;
   top: 380px;
   transition: 4s ease;
   pointer-events: none;
 }
 
 .rocket-launched {
+  visibility: visible;
   transform: translateY(-1200px);
 }
 
@@ -163,11 +155,6 @@
   bottom: 46px;
   opacity: 0;
   transition: 250ms ease;
-}
-
-.flame-anim {
-  position: relative;
-  animation: flicker 3ms ease-in infinite;
 }
 
 .flame {
@@ -208,10 +195,15 @@
   box-shadow: 0px 0px 9px 4px lightyellow;
 }
 
+.flame-anim {
+  position: relative;
+  animation: flicker 3ms ease-in infinite;
+}
+
 .earth {
   align-self: center;
   margin-top: 5rem;
-  width: 80rem;
-  z-index: -9999;
+  width: 80%;
+  z-index: 200;
   filter: drop-shadow(0px 0px 30px rgba(5, 0, 165, 0.2));
 }
