--- a/frontend/src/styles/Navbar.module.css
+++ b/frontend/src/styles/Navbar.module.css
@@ -9,7 +9,9 @@
 
 .logo {
   width: 12rem;
-  filter: drop-shadow(0px 0px 20px rgba(44, 0, 165, 0.5));
+  filter: drop-shadow(0px 0px 20px rgba(100,
+        25,
+        220, 0.3));
 }
 
 .burger-menu {
@@ -26,12 +28,22 @@
 
 .burger-img {
   width: 2.5rem;
+  animation: fadeIn 1500ms;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 .mobile-menu {
   visibility: hidden;
   opacity: 0;
-  transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
 }
 
 .nav-links {
