--- a/frontend/src/styles/Navbar.module.css
+++ b/frontend/src/styles/Navbar.module.css
@@ -9,9 +9,7 @@
 
 .logo {
   width: 12rem;
-  filter: drop-shadow(0px 0px 20px rgba(100,
-        25,
-        220, 0.3));
+  filter: drop-shadow(0px 0px 20px rgba(100, 25, 220, 0.3));
 }
 
 .burger-menu {
