--- a/frontend/src/styles/Navbar.module.css
+++ b/frontend/src/styles/Navbar.module.css
@@ -56,6 +56,7 @@
   background-color: rgba(4, 5, 23, 0.169);
   backdrop-filter: blur(0.8rem);
   transition: opacity 700ms ease-in-out, visibility 700ms ease-in-out;
+  z-index: 300;
 }
 
 .nav-links ul {
