PlanetDetail page dev started, home page new font

--- a/frontend/src/styles/Planet.module.css
+++ b/frontend/src/styles/Planet.module.css
@@ -86,3 +86,10 @@
     margin: 0 auto;
   }
 }
+
+.planet-detail,
+.planet-detail:before,
+.planet-detail:after {
+  width: 35rem;
+  height: 35rem;
+}
