--- a/frontend/src/styles/Navbar.module.css
+++ b/frontend/src/styles/Navbar.module.css
@@ -73,7 +73,7 @@
   text-decoration: none;
   display: block;
   font-size: 2rem;
-  color: #c8c8c8;
+  color: #787878;
 }
 
 @media screen and (min-width: 900px) {
@@ -115,6 +115,3 @@
     padding-inline: 1rem;
   }
 }
-
-
-
