--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,5 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Karla:wght@200;400&display=swap");
 
+*::-webkit-scrollbar {
+  width: 16px;
+  background: #000;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background: #000;
+}
+
+*::-webkit-scrollbar-thumb {
+  height: 56px;
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: #444;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -21,7 +43,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: url("/src/assets/bg.jpg");
   background-size: cover;
-  /* min-height: 100rem; */
   height: 100%;
 }
 
