--- a/frontend/src/styles/Planet.module.css
+++ b/frontend/src/styles/Planet.module.css
@@ -1,8 +1,8 @@
 .Planet,
 .Planet:before,
 .Planet:after {
-  height: 190px;
-  width: 190px;
+  height: 35vmin;
+  width: 35vmin;
   border-radius: 100vw;
   will-change: transform;
   margin: 0 auto;
@@ -72,25 +72,4 @@
     background-position: 0;
     transform: rotatez(-360deg);
   }
-}
-
-@media screen and (min-width: 1150px) {
-
-  .Planet,
-  .Planet:before,
-  .Planet:after {
-    height: 300px;
-    width: 300px;
-    border-radius: 100vw;
-    will-change: transform;
-    margin: 0 auto;
-  }
-}
-
-
-.planet-detail,
-.planet-detail:before,
-.planet-detail:after {
-  width: 35rem;
-  height: 35rem;
 }
