--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap");
 
 .container {
   display: flex;
@@ -11,7 +11,7 @@
   margin-top: 2.5rem;
   font-size: 2.8rem;
   color: #fff;
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
   text-shadow: #ffffff5d 3px 3px 50px;
 }
 
@@ -20,7 +20,7 @@
   color: #6419dc;
   margin-top: 1rem;
   z-index: 200;
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
   font-weight: lighter;
 }
 
@@ -50,7 +50,7 @@
   color: #ffffff;
   cursor: pointer;
   display: inline-block;
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 1.5;
@@ -79,9 +79,7 @@
 }
 
 .button-redirect:focus {
-  background-color: rgba(63,
-      173,
-      197, 0.1);
+  background-color: rgba(63, 173, 197, 0.1);
   border-color: #3e3bba;
   box-shadow: rgba(255, 255, 255, 0.15) 0 1px 0 inset,
     rgba(46, 54, 80, 0.075) 0 1px 1px, rgba(104, 101, 235, 0.5) 0 0 0 0.2rem;
@@ -215,4 +213,3 @@
   z-index: 200;
   filter: drop-shadow(0px 0px 30px rgba(5, 0, 165, 0.2));
 }
-
