--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -28,6 +28,7 @@
   animation: fadeOut 1500ms;
 }
 
+
 @keyframes fadeOut {
   from {
     opacity: 1;
@@ -38,13 +39,54 @@
   }
 }
 
+.btn-redirect {
+  display: flex;
+  align-items: center;
+  align-self: center;
+  cursor: pointer;
+  height: 5%;
+  width: 10%;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 500;
+  font-size: 1.5rem;
+  padding: 0.8em 1.3em 0.8em 0.9em;
+  border: 3px solid #36008d;
+  border-radius: 1rem;
+  box-shadow: rgba(255, 255, 255, 0.15) 0 1px 0 inset,
+    rgba(46, 54, 80, 0.075) 0 1px 1px;
+  color: white;
+  background: #ad5389;
+  background: linear-gradient(to right, #0f0c29, #302b6321, #24243e);
+  border: none;
+  letter-spacing: 0.05em;
+  border-radius: 16px;
+}
+
+.btn-redirect svg {
+  margin-right: 3px;
+  transform: rotate(30deg);
+  transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+.btn-redirect span {
+  transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+.btn-redirect:hover svg {
+  transform: translateX(5px) rotate(90deg);
+}
+
+.btn-redirect:hover span {
+  transform: translateX(7px);
+}
+
 .button-redirect {
   display: flex;
   align-self: center;
   appearance: button;
   border: 3px solid #36008d;
   border-radius: 1rem;
-  box-shadow: rgba(255, 255, 255, 0.15) 0 1px 0 inset,
+  box-shadow: rgba(255, 255, 255, 0.5) 0 1px 0 inset,
     rgba(46, 54, 80, 0.075) 0 1px 1px;
   box-sizing: border-box;
   color: #ffffff;
@@ -53,6 +95,7 @@
   font-family: 'Orbitron', sans-serif;
   font-size: 1.5rem;
   font-weight: 500;
+  letter-spacing: 1rem;
   line-height: 1.5;
   padding: 0.5rem 1.5rem;
   height: 3.7rem;
@@ -68,43 +111,20 @@
   z-index: 200;
 }
 
-.button-redirect:focus:not(:focus-visible),
-.button-redirect:focus {
-  outline: 0;
-}
-
 .button-redirect:hover {
-  background-color: #282698;
+  background-color: #2826986a;
   border-color: #3733e5;
 }
 
-.button-redirect:focus {
+.btn-redirect:focus {
   background-color: rgba(63,
       173,
       197, 0.1);
-  border-color: #3e3bba;
+  border-color: #5b3bbabe;
   box-shadow: rgba(255, 255, 255, 0.15) 0 1px 0 inset,
     rgba(46, 54, 80, 0.075) 0 1px 1px, rgba(104, 101, 235, 0.5) 0 0 0 0.2rem;
 }
 
-.button-redirect:active {
-  background-color: #3e3bba;
-  background-image: none;
-  border-color: #3a38ae;
-  box-shadow: rgba(46, 54, 80, 0.125) 0 3px 5px inset;
-}
-
-.button-redirect:active:focus {
-  box-shadow: rgba(46, 54, 80, 0.125) 0 3px 5px inset,
-    rgba(104, 101, 235, 0.5) 0 0 0 0.2rem;
-}
-
-.button-redirect:disabled {
-  background-image: none;
-  box-shadow: none;
-  opacity: 0.65;
-  pointer-events: none;
-}
 
 @keyframes flicker {
   0% {
