--- a/frontend/src/styles/BlackHole.modules.css
+++ b/frontend/src/styles/BlackHole.modules.css
@@ -47,6 +47,16 @@ b:after {
     left: -14vmin;
 }
 
+.black-hole-name {
+    box-shadow: inset 0 0 0 0 #54b3d6;
+    color: #fff;
+}
+
+.black-hole-name:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 @media screen and (min-width: 1150px) {
 
     b {
