--- a/frontend/src/styles/PlanetDetail.module.css
+++ b/frontend/src/styles/PlanetDetail.module.css
@@ -4,8 +4,15 @@
   flex-grow: 1;
 }
 
+.title {
+  background-color: rgba(255, 255, 255, 0.06);
+  margin: 3rem;
+  border-radius: 3rem;
+
+}
+
 .planet-name {
-  align-self: center;
+  text-align: center;
   margin-top: 2.5rem;
   color: rgb(255, 135, 135);
   font-size: 3rem;
@@ -13,6 +20,7 @@
 
 .planet-details {
   margin: 2rem;
+  padding: 1.5rem;
   color: #fff;
   font-size: 1.4rem;
   text-align: center;
@@ -21,22 +29,20 @@
 
 .small-cards {
   display: flex;
+  justify-content: space-around;
+  margin-bottom: 10rem;
 }
 
 .planet-type {
   text-align: center;
-  margin-right: 2rem;
-  margin-top: 1rem;
-  font-size: 1rem;
   font-weight: 600;
-  background: white;
-  width: 20%;
+  background: rgb(206, 206, 206);
   display: inline-block;
-  padding: 1em;
-  margin-top: 2em;
+  height: 4em;
+  width: 12em;
+  padding-top: 1.3rem;
+  margin-left: 3rem;
   border-radius: 5em;
-  text-transform: uppercase;
-  text-decoration: none;
   letter-spacing: 0.15em;
   box-shadow: 0 15px 20px -10px rgba(0, 0, 0, 0.3);
   transition: color 0.6s, box-shadow 0.3s, transform 0.3s;
@@ -44,18 +50,14 @@
 
 .planet-diameter {
   text-align: center;
-  margin-right: 2rem;
-  margin-top: 1rem;
-  font-size: 1rem;
   font-weight: 600;
-  background: white;
-  width: 20%;
+  background: rgb(206, 206, 206);
   display: inline-block;
-  padding: 1em;
-  margin-top: 2em;
+  height: 4em;
+  width: 12em;
+  padding-top: 1.3rem;
+  margin-left: 1.5rem;
   border-radius: 5em;
-  text-transform: uppercase;
-  text-decoration: none;
   letter-spacing: 0.15em;
   box-shadow: 0 15px 20px -10px rgba(0, 0, 0, 0.3);
   transition: color 0.6s, box-shadow 0.3s, transform 0.3s;
@@ -63,18 +65,29 @@
 
 .planet-distance {
   text-align: center;
-  margin-right: 2rem;
-  margin-top: 1rem;
-  font-size: 1rem;
   font-weight: 600;
-  background: white;
-  width: 20%;
+  background: rgb(206, 206, 206);
   display: inline-block;
-  padding: 1em;
-  margin-top: 2em;
+  height: 4em;
+  width: 12em;
+  padding-top: 1.3rem;
+  margin-left: 1.5rem;
   border-radius: 5em;
-  text-transform: uppercase;
-  text-decoration: none;
+  letter-spacing: 0.15em;
+  box-shadow: 0 15px 20px -10px rgba(0, 0, 0, 0.3);
+  transition: color 0.6s, box-shadow 0.3s, transform 0.3s;
+}
+
+.planet-composition {
+  text-align: center;
+  font-weight: 600;
+  background: rgb(206, 206, 206);
+  display: inline-block;
+  height: 4em;
+  width: 12em;
+  padding-top: 1.3rem;
+  margin-left: 1.5rem;
+  border-radius: 5em;
   letter-spacing: 0.15em;
   box-shadow: 0 15px 20px -10px rgba(0, 0, 0, 0.3);
   transition: color 0.6s, box-shadow 0.3s, transform 0.3s;
@@ -86,7 +99,7 @@
   color: #303030;
 }
 
-.planet-composition-title {
+/* .planet-composition-title {
   margin-left: 2rem;
   margin-top: 2.5rem;
   color: rgb(0, 213, 255);
@@ -97,7 +110,7 @@
   margin-top: 1rem;
   color: #fff;
   font-size: 1rem;
-}
+} */
 
 .planet-climate-title {
   display: flex;
