--- a/frontend/src/styles/Planet.module.css
+++ b/frontend/src/styles/Planet.module.css
@@ -1,8 +1,8 @@
 .Planet,
 .Planet:before,
 .Planet:after {
-  height: 190px;
-  width: 190px;
+  height: 35vmin;
+  width: 35vmin;
   border-radius: 100vw;
   will-change: transform;
   margin: 0 auto;
@@ -71,14 +71,3 @@
   }
 }
 
-@media screen and (min-width: 1150px) {
-  .Planet,
-  .Planet:before,
-  .Planet:after {
-    height: 300px;
-    width: 300px;
-    border-radius: 100vw;
-    will-change: transform;
-    margin: 0 auto;
-  }
-}
