--- a/frontend/src/styles/Rockets.module.css
+++ b/frontend/src/styles/Rockets.module.css
@@ -2,3 +2,68 @@
   display: flex;
   height: 60rem;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.Rockets-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1.5rem;
+}
+
+.Rockets-title {
+  color: white;
+  font: "Ubuntu";
+  font-size: xx-large;
+}
+
+.Rockets-desc {
+  color: white;
+  font: "Ubuntu";
+  font-size: medium;
+  text-align: center;
+}
+
+.Rockets-list {
+  height: 300vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 1.5rem;
+}
+
+.Rockets-1 {
+  border: 10px solid white;
+  background-color: lightgray;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+}
+
+.Rockets-1-name {
+  color: white;
+  font: "Ubuntu";
+  font-size: large;
+  text-align: center;
+  margin: 0.8rem;
+}
+
+img.Rockets-1-img {
+  margin: 0.8rem;
+  size: 30%;
+}
+
+button.modal-toggle {
+  background-color: turquoise;
+  cursor: pointer;
+  padding: 1rem 2rem;
+  text-transform: uppercase;
+  border: none;
+  margin: 0.8rem;
+}
