--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Karla:wght@200;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@200;400;500;600;700&display=swap");
 
 *::-webkit-scrollbar {
   width: 16px;
