--- a/frontend/src/styles/Planet.module.css
+++ b/frontend/src/styles/Planet.module.css
@@ -75,9 +75,8 @@
 }
 
 .planet-detail {
-  margin-top: 5rem;
-  margin-bottom: 18rem;
-  margin-right: 22.5rem;
+  height: 70vmin;
+  width: 70vmin;
   animation: none;
 }
 
