--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -24,7 +24,7 @@
 
 * {
   box-sizing: border-box;
-  margin: 0;
+ /* margin: 0;*/
   padding: 0;
 }
 
@@ -41,7 +41,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("/src/assets/bg.jpg");
+ /* background-image: url("/src/assets/bg.jpg");*/
   background-size: cover;
   height: 100%;
 }
