--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -11,7 +11,7 @@
   text-align: center;
   margin-top: 2.5rem;
   font-size: 2.8rem;
-  letter-spacing: 0.10em;
+  letter-spacing: 0.1em;
   color: #fff;
   font-family: "Orbitron", sans-serif;
   text-shadow: #ffffff5d 3px 3px 50px;
@@ -31,7 +31,6 @@
   animation: fadeOut 1500ms;
 }
 
-
 @keyframes fadeOut {
   from {
     opacity: 1;
@@ -48,7 +47,7 @@
   align-self: center;
   cursor: pointer;
   height: 6%;
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
   font-weight: 500;
   font-size: 1.5rem;
   padding: 0.8em 1.3em 0.8em 0.9em;
