--- a/frontend/src/styles/FAQ.module.css
+++ b/frontend/src/styles/FAQ.module.css
@@ -1,113 +1,168 @@
-@import url("https://fonts.google.com/specimen/Karla");
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap%27");
-* {
+*{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
-:root {
-	--font: #414141;
-	--underline: #33b0f3;
-  }
-
 body {
-  font-family: 'karla', sans-serif;
-  background-image: url("./assets/Makemakemoon100mile2000px.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 150%;
-  background-attachment: fixed;
-}
-header {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  padding: 15px;
+	margin: 0;
+	display: flex;
+  	flex-direction: column;
+	font-family: 'Roboto', sans-serif;
+	background-image: url('../src/assets/Pierre_A_cosmonaute_view_from_space_with_deep_space_behind_and__ea1d0708-7e03-49d6-8f1e-cf023d575f80.png');
+	background-size: cover;
 }
 
-header h1 {
-  color: #eee;
-  font-size: 50px;
-  font-weight: 700;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  margin: 0 auto;
-  text-shadow: 4px 4px 8px rgba(250, 250, 250, 0.451);
-  font-family: "Orbitron", sans-serif;
+.accordion-arrows {
+	margin: auto;
+	width: 60%;
+	margin-top: 10%;
+	margin-bottom: 10%;
+}
+.accordion-arrows input {
+	display: none;
+}
+.Header-box {
+	color: #EEE;
+	font-size: 3rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+  	line-height: 5rem;
+	margin-bottom: 2rem;
+	text-shadow: 4px 4px 8px rgba(250, 250, 250, 0.451);
+	font-family: 'Orbitron', sans-serif;	
+}
+.box {
+	display: block;
+	margin-top: 10px;
+	position: relative;
+  	height: 64px;
+    transition: all .15s ease-in-out;
+	border-radius: 10px;
+}
+.box::before {
+    content: '';
+    position: absolute;
+    display: block;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    pointer-events: none;
+    
 }
 
-.faqs {
-  width: 100%;
-  max-width: 768px;
-  margin: 0 auto;
-  padding: 15px;
+.box-title {
+	background-color: rgba(232, 225, 225, 0.84);
+	opacity: 0.7;
+	border-radius: 0.1rem;
+	margin: 0;
+	font-size: 1rem;
+	color: black;
+	cursor: initial;
+	text-align:left;
+	width: 90%;
+	height: 70px;
+	/*line-height: 64px;*/
+	/*padding: 0 20px;*/
+	display: flex;
+	flex-direction: row;
+	cursor: pointer;
+	padding-top: 20px;
+	padding-bottom: 10px;
+	
 }
 
-.faqs .faq {
-  margin: 15px;
-  padding: 15px;
-  background-color: rgba(255, 255, 255, 0.938);
-  border-radius: 3px;
-  opacity: 0.8;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+.box-content {
+	width: 99%;
+	padding: 30px 20px;
+	font-size: 11pt;
+	color: black;
+	display: none;
+	background-color: rgba(223, 231, 231, 0.128);
+	border-radius: 5px;
+	overflow: hidden
+	
+}
+.box-close {
+	position: absolute;
+	height: 64px;
+	width: 100%;
+	top: 0;
+	left: 0;
+	cursor: pointer;
+	display: none;
+}
+input:checked + .box {
+	height: auto;
+	margin: 16px 0;
+  	box-shadow: 0 15px 25px rgb(241 235 235 / 26%);
+}
+input:checked + .box .box-title {
+	border-bottom: 1px solid rgba(156, 152, 152, 0.935);
+}
+input:checked + .box .box-content,
+input:checked + .box .box-close {
+	display: inline-block;
+}
+.accordion-arrows .box-title {
+	padding-left: 44px;
+	width: 100%;
+}
+.accordion-arrows .box-title:before {
+	position: absolute;
+	display: block;
+	content: '\00bb';
+	font-size: 28pt;
+	left: 20px;
+	top: 4px;
+	transition: transform .20s ease-in-out;
+	color: rgba(32, 241, 241, 0.774);
+}
+input:checked + .box .box-title:before {
+	transform: rotate(90deg);
 }
 
-.faqs .faq .faq-question {
-  position: relative;
-  font-size: 20px;
-  padding-right: 80px;
-  transition: all 0.4s ease;
-}
 
-.faqs .faq .faq-question::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  right: 0px;
-  transform: translateY(-50%);
-  width: 20px;
-  height: 15px;
-  background-image: url("./assets/imagesAbout/down-double-chevrons-blue-16124.png");
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  transition: all 0.4s ease-out;
-}
 
-.faqs .faq .faq-answer {
-  opacity: 0;
-  max-height: 0;
-  overflow-y: hidden;
-  transition: all 0.4s ease-out;
-}
-
-.faqs .faq.open .faq-question {
-  margin-bottom: 20px;
-}
-
-.faqs .faq.open .faq-question::after {
-  transform: translateY(-50%) rotate(180deg);
-}
-
-.faqs .faq.open .faq-answer {
-  max-height: 1000px;
-  opacity: 1;
-}
-
-@media screen and (min-width: 900px) {
+@media screen and (max-width: 1100px) {
   body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
     background-attachment: fixed;
   }
-  .flex-container {
-    width: 100%;
-    max-width: 768px;
-    margin: 0 auto;
-    padding: 15px;
+  .box{
+	width: 100%;
+	max-width: 768px;
+	 
   }
+  .box-content {
+	/*width: 99%;*/
+	margin: auto;
+	display: flex;
+	padding: auto;
+	font-size: 11pt;
+	color: black;
+	display: none;
+	background-color: rgba(223, 231, 231, 0.128);
+	border-radius: 5px;
+	overflow: hidden
+
 }
+.box-title{
+	font-size: 14px;
+	display: flex;
+	flex-direction: column;
+	padding-right: 25px;
+	width: 100%;
+	height: 70px;
+			
+}
+
+
+}
+
