--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -41,7 +41,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("/src/assets/bg.jpg");
+  background-image: url("../assets/BckTempo.png");
   background-size: cover;
   height: 100%;
 }
