--- a/frontend/src/styles/Rockets.module.css
+++ b/frontend/src/styles/Rockets.module.css
@@ -1,10 +1,5 @@
-@import url("https://fonts.google.com/specimen/Karla%22");
+@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap%27%22");
-
-.container {
-  display: flex;
-  height: 60rem;
-}
 
 .container {
   display: flex;
@@ -26,7 +21,7 @@
   color: white;
   font-family: 'Orbitron', sans-serif;
   letter-spacing: 0.2rem;
-  font-size: 4.5rem;
+  font-size: 4.25rem;
   margin: 2rem;
 }
 
@@ -50,13 +45,13 @@
 }
 
 .Rockets-1 {
-  width: 100%;
+  width: 80%;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1.5rem;
-}
+  margin: 1rem;
+} 
 
 .Rockets-1-name {
   color: white;
@@ -69,6 +64,6 @@
 
 img.Rockets-1-img {
   margin: 2rem;
-  height: 16rem;
+  height: auto;
   width: 24rem;
-}
+} 
