--- a/frontend/src/styles/Reserve.module.css
+++ b/frontend/src/styles/Reserve.module.css
@@ -195,6 +195,13 @@ i {
   font-size: 10px;
 }
 
+.BtnRocket {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (min-width: 900px) {
   .Reserv-box {
     display: flex;
