--- a/frontend/src/styles/planets/BlackHole.module.css
+++ b/frontend/src/styles/planets/BlackHole.module.css
@@ -56,6 +56,12 @@ b:after {
   display: none;
 }
 
+.planet-name {
+  box-shadow: inset 0 0 0 0 #54b3d6;
+  color: #fff;
+  border: none;
+}
+
 .black-hole-name:hover {
   cursor: pointer;
   text-decoration: underline;
