--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -164,11 +164,17 @@
 .earth {
   align-self: center;
   margin-top: 5rem;
-  margin-bottom: -2.5rem;
   width: 80%;
   z-index: 200;
   filter: drop-shadow(0px 0px 30px rgba(5, 0, 165, 0.2));
+  height: 100%;
 }
+
+/* @media screen and (max-width: 1600px) {
+  .earth {
+    margin-bottom: -10rem;
+  }
+} */
 
 @media screen and (min-width: 900px) {
   .btn-redirect {
@@ -181,9 +187,5 @@
 
   .slogan {
     font-size: 2rem;
-  }
-
-  .earth {
-    margin-bottom: -1rem;
   }
 }
