--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -29,7 +29,7 @@
 }
 
 .hide-things {
-  animation: fadeOut 1500ms;
+  animation: fadeOut 2500ms;
 }
 
 @keyframes fadeOut {
@@ -163,7 +163,7 @@
 .earth {
   align-self: center;
   margin-top: 5rem;
-  margin-bottom: -3rem;
+  height: 100%;
   width: 80%;
   z-index: 200;
   filter: drop-shadow(0px 0px 30px rgba(5, 0, 165, 0.2));
@@ -180,9 +180,5 @@
 
   .slogan {
     font-size: 2rem;
-  }
-
-  .earth {
-    margin-bottom: -1rem;
   }
 }
