--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -15,6 +15,55 @@
   color: #fff;
   font-family: "Orbitron", sans-serif;
   text-shadow: #ffffff5d 3px 3px 50px;
+  animation: lights 5s 750ms linear infinite;
+}
+
+@keyframes lights {
+  0% {
+    color: hsl(240, 11%, 95%);
+    text-shadow:
+      0 0 1em hsla(186, 100%, 50%, 0.2),
+      0 0 0.125em hsla(228, 100%, 60%, 0.3),
+      -1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
+      1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
+  }
+
+  30% {
+    color: hsl(240, 11%, 95%);
+    text-shadow:
+      0 0 1em hsla(196, 100%, 50%, 0.5),
+      0 0 0.125em hsla(219, 100%, 60%, 0.5),
+      -0.5em -0.125em 0.25em hsla(40, 100%, 60%, 0.2),
+      0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
+  }
+
+  40% {
+    color: hsl(231, 24%, 94%);
+    text-shadow:
+      0 0 1em hsla(194, 100%, 50%, 0.5),
+      0 0 0.125em hsla(320, 100%, 90%, 0.5),
+      -0.25em -0.125em 0.125em hsla(40, 100%, 60%, 0.2),
+      0.25em 0.125em 0.125em hsla(200, 100%, 60%, 0.4);
+  }
+
+  70% {
+    color: hsl(230, 43%, 97%);
+    text-shadow:
+      0 0 1em hsla(202, 100%, 50%, 0.5),
+      0 0 0.125em hsla(208, 100%, 60%, 0.5),
+      0.5em -0.125em 0.25em hsla(40, 100%, 60%, 0.2),
+      -0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
+  }
+
+  100% {
+    color: hsl(240, 17%, 98%);
+    text-shadow:
+      0 0 1em hsla(187, 100%, 50%, 0.2),
+      0 0 0.125em hsla(228, 100%, 60%, 0.3),
+      1em -0.125em 0.5em hsla(40, 100%, 60%, 0),
+      -1em 0.125em 0.5em hsla(200, 100%, 60%, 0);
+  }
+
 }
 
 .slogan {
