--- a/frontend/src/styles/PlanetDetail.module.css
+++ b/frontend/src/styles/PlanetDetail.module.css
@@ -16,7 +16,8 @@
   text-align: center;
   margin-top: 2.5rem;
   color: #efefefe9;
-  font-size: 3rem;
+  font-size: 3.5rem;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .planet-details {
@@ -283,6 +284,7 @@
   margin-bottom: 5rem;
   height: 65%;
   width: 85%;
+  z-index: 0;
 }
 
 .activities-container {
@@ -306,6 +308,7 @@
   align-self: center;
   height: 65%;
   width: 85%;
+  z-index: 0;
 }
 
 @media screen and (min-width: 900px) {
@@ -321,5 +324,9 @@
   .activity {
     height: auto;
     width: 70%;
+  }
+
+  .planet-time {
+    padding-top: 22px;
   }
 }
