--- a/frontend/src/styles/planets/BlackHole.module.css
+++ b/frontend/src/styles/planets/BlackHole.module.css
@@ -50,6 +50,8 @@ b:after {
 .black-hole-name {
   box-shadow: inset 0 0 0 0 #54b3d6;
   color: #fff;
+  border: none;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .no-planet-name {
