--- a/frontend/src/styles/planets/Venus.module.css
+++ b/frontend/src/styles/planets/Venus.module.css
@@ -95,6 +95,8 @@
 .planet-name {
   box-shadow: inset 0 0 0 0 #54b3d6;
   color: #fff;
+  border: none;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .planet-name:hover {
